[metadata]
name = miyatsuki_tools
version = 0.1.3
description = A brief description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miyatsuki/tools
author = miyatsuki
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
